# kyc_app_be

./: .env  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
recursiveZkCircuit/recursiveLinearSearch/: Cargo.toml
recursiveZkCircuit/recursiveLinearSearch/src/: code_store.rs  is_email_exists_circuit.rs  main.rs  store_email_circuit.rs
recursiveZkCircuit/simpleCircuit/: Cargo.toml
recursiveZkCircuit/simpleCircuit/src/: main.rs  working_version.rs
src/: app.module.ts  data-source.ts  types.d.ts
src/migration/: 1673423542832-create-users-table.ts
src/scripts/: circuit.sh  ptau.sh
src/scripts/recursiveZk/: circuit.sh  ptau.sh
src/user/: user.module.ts
src/user/agent/: mockUserStorage.agent.ts  user.agent.ts  userStorage.agent.ts
src/user/api/: err.messages.ts  user.controller.spec.ts  user.controller.ts
src/user/capabilities/createUser/: createUserCommand.handler.ts
src/user/capabilities/deleteUser/: deleteUserCommand.handler.ts
src/user/capabilities/getAllUsers/: getAllUsersQuery.handler.ts
src/user/capabilities/getUserById/: getUserByIdQuery.handler.ts
src/user/capabilities/updateUserBankValidation/: updateUserBankValidation.command.ts  (+1 more)
src/user/models/: panValidationStatus.ts  razorpayAccount.ts  user.ts
src/user/utilities/: apiCall.service.ts
zk/: phoneNumber_verification_key.json
zk/phoneNumber_js/: phoneNumber.wasm
zk/ptau/: pot8_0001.ptau  pot8_0002.ptau  pot8_0003.ptau  pot8_beacon.ptau
zk/zkey/: phoneNumber_0000.zkey  phoneNumber_0001.zkey  phoneNumber_0002.zkey  phoneNumber_0003.zkey  phoneNumber_final.zkey
(+57 files in other folders)
