[package]
name = "simple_circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
plonky2 = "0.1.3"
plonky2_ecdsa = "0.1.0"
plonky2_field = "0.1.0"
plonky2_u32 = "0.1.0"
